# boost-python-cmake

./: CMakeLists.txt  build.sh  readme.md
src/: hello.cpp
test/: test.py
